--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -432,40 +432,59 @@ function toggleSearch() {
   </section>
 
   <!-- ================= MOBILE HEADER ================= -->
-  <section class="mobile-header d-lg-none">
-    <nav class="navbar navbar-light px-2 py-1">
-      <div class="container-fluid d-flex justify-content-between align-items-center">
+  <!-- ================= MOBILE HEADER ================= -->
+<section class="mobile-header d-lg-none">
+  <nav class="navbar navbar-expand-lg navbar-light px-2 py-1">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
 
-        <!-- Logo -->
-        <a href="{% url 'home' %}" class="navbar-brand p-0 m-0">
-          <img src="{% static 'images/logo.png' %}" class="logo-img" alt="Logo">
-        </a>
+      <!-- Logo -->
+      <a href="{% url 'home' %}" class="navbar-brand p-0 m-0">
+        <img src="{% static 'images/logo.png' %}" class="logo-img" alt="Logo">
+      </a>
 
-        <!-- Search -->
-        <div class="search-wrapper mx-2 flex-grow-1" id="searchWrapper">
-          <form method="GET" action="{% url 'search' %}" class="d-flex">
-            <input type="text" name="keyword" placeholder="Search..." class="form-control form-control-sm">
-          </form>
-        </div>
+      <!-- Toggle button for collapsed menu -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mobileNavbar" aria-controls="mobileNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!-- Icons -->
-        <div class="nav-icons d-flex align-items-center">
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse" id="mobileNavbar">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-          <!-- Categories -->
-          <div class="dropdown mx-1">
-            <button class="btn p-1" data-toggle="dropdown">
-              <i class="fa fa-bars"></i>
-            </button>
-            <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item" href="{% url 'store' %}">All products</a>
+          <!-- Store / About links -->
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'store' %}active{% endif %}" href="{% url 'store' %}">Store</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}" href="{% url 'about' %}">About</a>
+          </li>
+
+          <!-- Categories dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="categoriesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categories
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="categoriesDropdown">
+              <li><a class="dropdown-item" href="{% url 'store' %}">All products</a></li>
               {% for category in links %}
-                <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
+                <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a></li>
               {% endfor %}
-            </div>
+            </ul>
+          </li>
+
+        </ul>
+
+        <!-- Right icons: search, cart, mode, user -->
+        <div class="d-flex align-items-center">
+          <!-- Search -->
+          <div class="search-wrapper mx-2" id="searchWrapper">
+            <form method="GET" action="{% url 'search' %}" class="d-flex">
+              <input type="text" name="keyword" placeholder="Search..." class="form-control form-control-sm">
+            </form>
           </div>
 
           <!-- Cart -->
-          <a href="{% url 'cart' %}" class="btn p-1 position-relative mx-1">
+          <a href="{% url 'cart' %}" class="btn position-relative mx-1">
             <i class="fa fa-shopping-cart"></i>
             <span class="badge badge-danger badge-pill position-absolute" style="top:-5px; right:-8px;">
               {{ cart_count }}
@@ -473,21 +492,22 @@ function toggleSearch() {
           </a>
 
           <!-- Mode toggle -->
-          <button id="modeToggle" class="btn p-1 mx-1" onclick="toggleMode()">
+          <button id="modeToggle" class="btn mx-1" onclick="toggleMode()">
             <i id="modeIcon" class="fa fa-moon"></i>
           </button>
 
           <!-- User -->
           {% if user.id %}
-            <a href="{% url 'dashboard' %}" class="btn p-1 mx-1"><i class="fa fa-user"></i></a>
+            <a href="{% url 'dashboard' %}" class="btn mx-1"><i class="fa fa-user"></i></a>
           {% else %}
-            <a href="{% url 'login' %}" class="btn p-1 mx-1"><i class="fa fa-sign-in-alt"></i></a>
+            <a href="{% url 'login' %}" class="btn mx-1"><i class="fa fa-sign-in-alt"></i></a>
           {% endif %}
-
         </div>
       </div>
-    </nav>
-  </section>
+    </div>
+  </nav>
+</section>
+
 
 </header>
 
